Question by user routing by credential Id, left panel spacing widen

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -3,19 +3,18 @@
     <div class="col-md-10" style="min-height:60vh; border:1px solid">
         <div class="row" style="min-height:10vh; border:1px solid"><profile-info></profile-info></div>
         <div class="row">
-            <div class="col-md-2" style="min-height:60vh; border:1px solid">
+            <div class="col-md-3" style="min-height:60vh; border:1px solid">
                 <ul class="profile-leftmenu">
-                    <li><a routerLink="/dashboard/viewprofile/user-question">Question<span>5</span> </a></li>
-                    <li><a routerLink="/dashboard/viewprofile/user-answer">Answer <span>5</span></a></li>
-                    <li><a routerLink="/dashboard/viewprofile/follower">follower <span>5</span></a></li>
-                    <li><a routerLink="/dashboard/viewprofile/following">following <span>5</span></a></li>
-                    <li><a routerLink="/dashboard/viewprofile/bookmark">bookmark</a></li>
-                    <li><a routerLink="/dashboard/viewprofile/blog-create">Blog Create</a></li>
-                    <li><a routerLink="/dashboard/blog-post">Blog Post</a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile/user-question',credential.id]">Question<span>5</span> </a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile/user-answer',credential.id]">Answer<span>5</span> </a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile/follower',credential.id]" >follower <span>5</span></a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile/following',credential.id]">following <span>5</span></a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile/bookmark',credential.id]">bookmark</a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile/blog-create',credential.id]">Blog Create</a></li>
+                    <li><a [routerLink]="['/dashboard/blog-post',credential.id]">Blog Post</a></li>
                 </ul>
             </div>
-            <div class="col-md-10" style="min-height:60vh; border:1px solid">
-                <!--<add-credential></add-credential>-->
+            <div class="col-md-9" style="min-height:60vh; border:1px solid">
                 <router-outlet></router-outlet>
             </div>
         </div>
