--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/user-question/user-question.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/user-question/user-question.component.html
@@ -1,1 +1,3 @@
-﻿<h1>user-question</h1>
+﻿<div class="tab" *ngFor="let question of questions">
+    <question-panel [question]="question"></question-panel>
+</div>
