On click routing color change

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
@@ -13,6 +13,9 @@
     color: #9d9d9b;
 }
 
+.profile-leftmenu > li > a:focus {
+    color: #f5b372;
+}
 .profile-leftmenu > li > a > span {
     float: right;
 }
