akash:UserFollower bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        
+        <!-- popup -->
         <div *ngIf="showQuestionEditForm">
             <div class="details-container">
                 <form (ngSubmit)="updateQuestion()" #questionVM="ngForm">
