Follower functionality added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/follower/follower.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/follower/follower.component.html
@@ -1,1 +1,5 @@
-﻿<h1>follower</h1>
+﻿<div class="row">
+    <div class="col-md-4" *ngFor="let usr of user">
+        <user-info [userObj]="usr"></user-info>
+    </div>
+</div>
