--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -118,7 +118,7 @@
             <!-- ===================User Name================== -->
             <div class="user-name">
                 <div [hidden]="!isHidden">
-                    <h1> {{username}} </h1>
+                    <h1> {{credential.firstName}} </h1>
                     <a (click)="isHidden = fales" class="edit"><span><i class="fa fa-edit"></i>Edit</span> </a>
                 </div>
                 <div [hidden]="isHidden">
