--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -14,7 +14,7 @@
             <img class="user-image " src="../../../../profile/{{userObj?.imageUrl}}" 
                   (mouseover)='over(userObj?.userId)' [popover]="userInfoDetailsPopover" [popoverOnHover]="true" [popoverCloseOnClickOutside]="true"/>
             <div class="user-info">
-                <div class="user-detail">{{userObj?.name}}, {{userObj?.occupation}} </div>
+                <div class="user-detail">{{userObj?.name}} {{userObj?.occupation}} </div>
                 <div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>
             </div>
         </div>
@@ -51,26 +51,26 @@
     </ul>
     <br />
     <div class="topAlign">
-
         <ul class="fa-ul">
-
-            <li>
+            <li ngIf="userInfoDetails?.answerCount!=0">
                 <i class="fa-li fa fa-check-square"></i>Answers: {{userInfoDetails?.answerCount}}
             </li>
-            <li><i class="fa-li fa fa-question"></i>Questions: {{userInfoDetails?.questionCount}}</li>
+            <li ngIf="userInfoDetails?.questionCount!=0"><i class="fa-li fa fa-question"></i>Questions: {{userInfoDetails?.questionCount}}</li>
 
-            <li>
+            <li ngIf="userInfoDetails?.education!=''">
                 <i class="fa-li fa fa-university"></i>Education: {{userInfoDetails?.education}}
             </li>
-            <li><i class="fa-li fa fa-info-circle"></i>employment: {{userInfoDetails?.employment}}</li>
-            <li>
+            <li ngIf="userInfoDetails?.employment!=''">
+                <i class="fa-li fa fa-info-circle"></i>employment: {{userInfoDetails?.employment}}
+            </li>
+            <li ngIf="userInfoDetails?.place!=''">
                 <i class="fa-li fa fa-home "></i>Place: {{userInfoDetails?.place}}
             </li>
-            <li>
+            <li ngIf="userInfoDetails?.otherExperience!=''">
                 <i class="fa-li fa fa-cog"></i>otherExperience: {{userInfoDetails?.otherExperience}}
             </li>
-            
-            <li>
+
+            <li ngIf="userInfoDetails?.questionViewCount!=0">
                 <i class="fa-li fa fa-eye">
 
                 </i>Question Views: {{userInfoDetails?.questionViewCount}}
@@ -81,41 +81,5 @@
         </ul>
     </div>
 
-    <!--<ul style="list-style-type: none;" class="fa-ul">
-    <li style="list-style-type: none;">
-        <a>{{userInfoDetails?.userId}}</a>
-    </li>
-    <li>
-        <img class="user-image " src="../../../../profile/{{userInfoDetails?.imageUrl}}"/>
-        <div class="user-info">
-            <div class="user-detail">
-                {{userInfoDetails?.fullName}}, {{userInfoDetails?.title}}
-            </div>
-        </div>
-    </li>
-    <li class="fa-li fa fa-check-square">
-        List icons
-    </li>-->
-    <!--<li>
-        <a>{{userInfoDetails?.answerCount}}</a>
-    </li>
-    <li>
-        <a></a>
-    </li>
-    <li>
-        <a>{{userInfoDetails?.education}}</a>
-    </li>
-    <li>
-        <a>{{userInfoDetails?.employment}}</a>
-    </li>
-    <li>
-        <a>{{userInfoDetails?.place}}</a>
-    </li>
-    <li>
-        <a>{{userInfoDetails?.otherExperience}}</a>
-    </li>
-    <li>
-        <a>{{userInfoDetails?.questionViewCount}}</a>
-    </li>
-    </ul>-->
+   
 </popover-content>
