--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -1,11 +1,11 @@
 ﻿<nav-bar></nav-bar>
 <div class="row">
-    <div class="col-md-10" style="min-height:60vh; border:1px solid">
-        <div class="row" style="min-height:10vh; border:1px solid"><profile-info></profile-info></div>
+    <div class="col-md-10" >
+        <div class="row" ><profile-info [userObj]=""></profile-info></div>
         <div class="row">
-            <div class="col-md-3" style="min-height:60vh; border:1px solid">
+            <div class="col-md-3" >
                 <ul class="profile-leftmenu">
-                    <li><a [routerLink]="['/dashboard/viewprofile/user-question',credential.id]">Question<span>5</span> </a></li>
+                    <li id="question"><a [routerLink]="['/dashboard/viewprofile/user-question',credential.id]">Question<span>5</span> </a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile/user-answer',credential.id]">Answer<span>5</span> </a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile/follower',credential.id]" >follower <span>5</span></a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile/following',credential.id]">following <span>5</span></a></li>
@@ -14,13 +14,13 @@
                     <li><a [routerLink]="['/dashboard/blog-post',credential.id]">Blog Post</a></li>
                 </ul>
             </div>
-            <div class="col-md-9" style="min-height:60vh; border:1px solid">
+            <div class="col-md-9" >
                 <router-outlet></router-outlet>
             </div>
         </div>
     </div>
-    <div class="col-md-2" style="min-height:60vh; border:1px solid">
-        <div style="min-height:20vh; border:1px solid">
+    <div class="col-md-2" >
+        <div>
             <h1>Credentials</h1>
         </div>
         <profile-stat></profile-stat>
