--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -11,10 +11,14 @@
 <div class="row row-fix inline-display">
     <div *ngIf="!isAnonymous">
         <div *ngIf="userObj">
-            <img class="user-image " src="../../../../profile/{{userObj?.imageUrl}}" 
-                  (mouseover)='over(userObj?.userId)' [popover]="userInfoDetailsPopover" [popoverOnHover]="true" [popoverCloseOnClickOutside]="true"/>
+            <img class="user-image " src="../../../../profile/{{userObj?.imageUrl}}"
+                 (mouseover)='over(userObj?.userId)' [popover]="userInfoDetailsPopover" [popoverOnHover]="true" [popoverCloseOnClickOutside]="true" />
             <div class="user-info">
-                <div class="user-detail">{{userObj?.name}} {{userObj?.occupation}} </div>
+                <div class="user-detail">
+                    {{userObj?.name}} 
+                    <br />
+                    <span style="font-size: 12px;"> {{userObj?.occupation}}</span>
+                </div>
                 <div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>
             </div>
         </div>
@@ -81,5 +85,5 @@
         </ul>
     </div>
 
-   
+
 </popover-content>
