User profile get credential by user Id added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -1,7 +1,7 @@
 ﻿<nav-bar></nav-bar>
 <div class="row">
     <div class="col-md-10" >
-        <div class="row" ><profile-info [userObj]=""></profile-info></div>
+        <div class="row" ><profile-info [credential]="credential"></profile-info></div>
         <div class="row">
             <div class="col-md-3" >
                 <ul class="profile-leftmenu">
