following and follower load functionality  fixed for user id

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -5,13 +5,14 @@
         <div class="row">
             <div class="col-md-3" >
                 <ul class="profile-leftmenu">
-                    <li id="question"><a [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']">Question<span>5</span> </a></li>
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']">Answer<span>5</span> </a></li>
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" >follower <span>5</span></a></li>
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'following']">following <span>5</span></a></li>
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']">bookmark</a></li>
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'blog-create']">Blog Create</a></li>
-                    <li><a [routerLink]="['/dashboard/blog-post']">Blog Post</a></li>
+                    <li id="question"><a [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']">Questions<span>5</span> </a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']">Answers<span>5</span> </a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" >Followers <span>5</span></a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'following']">Followings <span>5</span></a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']">Bookmarks</a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'blog-create']">Blogs</a></li>
+                    <!--<li><a [routerLink]="['/dashboard/blog-post']">Blog Post</a></li>-->
+                    <li><a [routerLink]="['/dashboard/blog-post']">Direct Question</a></li>
                 </ul>
             </div>
             <div class="col-md-9" >
