--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
@@ -40,7 +40,6 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                {{credential.title}}
                 <h3>Edit Credentials</h3>
                 <p>Credentials also appear on answers you write.</p>
             </div>
@@ -51,7 +50,7 @@
                 </div>
                 <div class="profile-modal-button-container">
                     <a (click)="DeleteCredentialTitle()">Delete</a>
-                    <a (click)="onClickedExit()">Cancle</a>
+                    <a (click)="onClickedExit()">Cancel</a>
                     <button class="btn btn-sm btn-primary" (click)="saveCredentialTitle()">Save</button>
                 </div>
             </div>
