Routing link psacing fixed, on focus color changed and underline, on load focus first link

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
@@ -30,6 +30,10 @@
         text-align: right;
     }
 
+        .profile-modal-button-container a {
+            margin-right: 10px;
+        }
+
     .modal-header h3 {
         font-weight: bold;
     }
@@ -46,7 +50,7 @@
             <div class="profile-modal-body">
                 <i class="fa fa-user"></i><span>Edit</span>
                 <div>
-                    <input type="text" [(ngModel)]="credential.title"/>
+                    <input type="text" [(ngModel)]="credential.title" />
                 </div>
                 <div class="profile-modal-button-container">
                     <a (click)="DeleteCredentialTitle()">Delete</a>
