--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
@@ -4,17 +4,21 @@
     margin: 30px auto;
     border-top: 2px solid #d2d2cf;
     padding-top: 10px;
-    padding-left: 5px;
-    padding-right: 20px;
-    list-style:none;
+    padding-left: 30px;
+    padding-right: 30px;
+    list-style: none;
 }
-
+.profile-leftmenu > li:focus {
+   border-bottom:1px solid #f5b372;
+}
 .profile-leftmenu > li > a {
     color: #9d9d9b;
 }
 
 .profile-leftmenu > li > a:focus {
     color: #f5b372;
+    border-bottom: 1px solid;
+    display: block;
 }
 .profile-leftmenu > li > a > span {
     float: right;
