--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-3" >
                 <ul class="profile-leftmenu">
-                    <li id="question"><a [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']">Questions<span>5</span> </a></li>
+                    <li ><a tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']">Questions<span>5</span> </a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']">Answers<span>5</span> </a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" >Followers <span>5</span></a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'following']">Followings <span>5</span></a></li>
