On clikc routing number and non number seperated

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
@@ -1,25 +1,30 @@
 ﻿.profile-leftmenu {
     color: #9d9d9b;
     width: 80%;
-    margin: 30px auto;
-    border-top: 2px solid #d2d2cf;
+    margin: 0 auto;
+    border-top: 1px solid #eeeeee;
     padding-top: 10px;
     padding-left: 30px;
     padding-right: 30px;
     list-style: none;
 }
+
 .profile-leftmenu > li:focus {
-   border-bottom:1px solid #f5b372;
+    border-bottom: 1px solid #f5b372;
 }
+
 .profile-leftmenu > li > a {
     color: #9d9d9b;
 }
-
+.link-with-number{
+    display: block;
+}
 .profile-leftmenu > li > a:focus {
     color: #f5b372;
     border-bottom: 1px solid;
-    display: block;
 }
+
+
 .profile-leftmenu > li > a > span {
     float: right;
 }
