--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -14,6 +14,7 @@
 
     .user-name {
         margin-top: 10px;
+        margin-bottom: 5px;
     }
 
     .profile-info input {
@@ -36,7 +37,9 @@
     .panel-heading {
         position: relative;
     }
-
+    .credential{
+        margin-bottom:5px;
+    }
     .credential a {
         display: inline-block;
     }
