--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -5,10 +5,10 @@
         <div class="row">
             <div class="col-md-3" >
                 <ul class="profile-leftmenu">
-                    <li ><a tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']">Questions<span>5</span> </a></li>
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']">Answers<span>5</span> </a></li>
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" >Followers <span>5</span></a></li>
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'following']">Followings <span>5</span></a></li>
+                    <li ><a class="link-with-number" tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']">Questions<span>5</span> </a></li>
+                    <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']">Answers<span>5</span> </a></li>
+                    <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" >Followers <span>5</span></a></li>
+                    <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'following']">Followings <span>5</span></a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']">Bookmarks</a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'blog-create']">Blogs</a></li>
                     <!--<li><a [routerLink]="['/dashboard/blog-post']">Blog Post</a></li>-->
