--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -22,7 +22,7 @@
     }
 </style>
 <div class="row  body-padding">
-    <apq-nav></apq-nav>
-    
+    <!--<apq-nav></apq-nav>-->
+    <nav-bar></nav-bar>
     <router-outlet></router-outlet>
 </div>
