--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -38,14 +38,11 @@
     <ul style="list-style-type: none;">
         <li>
             <img class="user-image " src="../../../../profile/{{userInfoDetails?.imageUrl}}" />
-            <!--<div class="user-info" style="margin-top: 10px;">
-                <div class="user-detail">
-                    {{userInfoDetails?.fullName}}, {{userInfoDetails?.title}}
-                </div>
-            </div>-->
+            
             <div class="user-info">
                 <div class="user-detail">
-                    {{userInfoDetails?.fullName}},<br />
+                    {{userInfoDetails?.fullName}}
+                    <br/>
                     <span style="font-size: 12px;"> {{userInfoDetails?.title}}</span>
                 </div>
                 <!--<div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>-->
