on focus router link background color change

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
@@ -8,23 +8,28 @@
     padding-right: 30px;
     list-style: none;
 }
-
-.profile-leftmenu > li:focus {
-    border-bottom: 1px solid #f5b372;
+.profile-leftmenu li{
+    margin-bottom:5px;
 }
-
+.border-top-grey{
+    border-top:1px solid #eeeeee;
+}
+/*.profile-leftmenu > li:focus {
+    border-bottom: 1px solid ;
+}*/
 .profile-leftmenu > li > a {
-    color: #9d9d9b;
+    color: #cecaca;
+}
+.profile-leftmenu > li > a>span{
+    font-weight:bold;
 }
 .link-with-number{
     display: block;
 }
 .profile-leftmenu > li > a:focus {
-    color: #f5b372;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #ffd800;
+    background-color:#f4f4f4
 }
-
-
 .profile-leftmenu > li > a > span {
     float: right;
 }
