--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
@@ -9,7 +9,9 @@
     color: #215ea7;
     font-size: 14px;
 }
-
+.left-panel-list li{
+    margin-bottom:5px;
+}
 .menu-container {
     margin: 5px auto;
     width: 65%;
@@ -18,7 +20,8 @@
 }
 
 ul {
-    padding-left: 25px;
+    padding-left: 5px;
+    list-style:none;
 }
 
 .menu-container > ul > li > a {
