--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -1,14 +1,14 @@
 ﻿<nav-bar></nav-bar>
 <div class="row">
-    <div class="col-md-10" >
+    <div class="col-md-9" >
         <div class="row" ><profile-info [credential]="credential"></profile-info></div>
         <div class="row">
             <div class="col-md-3" >
                 <ul class="profile-leftmenu">
-                    <li ><a class="link-with-number" tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']">Questions<span>5</span> </a></li>
-                    <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']">Answers<span>5</span> </a></li>
-                    <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" >Followers <span>5</span></a></li>
-                    <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'following']">Followings <span>5</span></a></li>
+                    <li ><a class="link-with-number" tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']">Questions<span>{{profileParam?.questions}}</span> </a></li>
+                    <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']">Answers<span>{{profileParam?.answers}}</span> </a></li>
+                    <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" >Followers <span>{{profileParam?.followers}}</span></a></li>
+                    <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'following']">Followings <span>{{profileParam?.followings}}</span></a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']">Bookmarks</a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'blog-create']">Blogs</a></li>
                     <!--<li><a [routerLink]="['/dashboard/blog-post']">Blog Post</a></li>-->
@@ -23,10 +23,11 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2" >
+    <div class="col-md-3" >
         <div>
             <h1>Credentials</h1>
         </div>
-        <profile-stat></profile-stat>
+        <profile-category></profile-category>
+        <profile-stat [profileParam]="profileParam"></profile-stat>
     </div>
 </div>
