--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -27,7 +27,7 @@
         <div>
             <h1>Credentials</h1>
         </div>
-        <profile-category></profile-category>
+        <profile-category [categoryWiseAnswers]="categoryWiseAnswers"></profile-category>
         <profile-stat [profileParam]="profileParam"></profile-stat>
     </div>
 </div>
